# rind

./: Cargo.toml  README.md  build.sh  flake.nix  services.sd
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: kkx2hzq20ggrwhy385jglnxjncg4lqck-source  li2dw7s4mjmq0d15386kkpvvsdaraym2-source
src/: daemon.rs  init.rs  logger.rs  main.rs  messaging.rs  rind.rs
